--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,12 +12,13 @@
     <nav class="navbar navbar-default navigation-clean-search">
       <div class="container">
         <div class="navbar-header"><a class="navbar-brand navbar-link" href="#">Shorty</a>
-          <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+          <p>
+            <img width="132" height="60" src="/assets/images/icon.png">
+          </p>
         </div>
-        <div>
-          <img src="src/assets/img/icon.png">
-        </div>
+
         <div class="collapse navbar-collapse" id="navcol-1">
+
           <p class="navbar-text navbar-right"><a class="navbar-link login" href="#">Log In</a> <a class="btn btn-default action-button" role="button" href="#">Sign Up</a></p>
         </div>
       </div>
