fix front design. add like and dislike

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,14 +11,11 @@
   <div class="header-blue">
     <nav class="navbar navbar-default navigation-clean-search">
       <div class="container">
-        <div class="navbar-header"><a class="navbar-brand navbar-link" href="#">Shorty</a>
-          <p>
-            <img width="132" height="60" src="/assets/images/icon.png">
-          </p>
+        <div class="navbar-header">
+            <img width="132" height="60" src="/assets/images/icon2.png">
         </div>
 
         <div class="collapse navbar-collapse" id="navcol-1">
-
           <p class="navbar-text navbar-right"><a class="navbar-link login" href="#">Log In</a> <a class="btn btn-default action-button" role="button" href="#">Sign Up</a></p>
         </div>
       </div>
