--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,8 +1,8 @@
 .header-blue{
-  background:linear-gradient(135deg, #172a74, #21a9af);
-  background-color:#184e8e;
+  background-color:#212121;
   padding-bottom:1px;
   font-family:'Source Sans Pro', sans-serif;
+  border-bottom: #ebeff1 thick solid;
 }
 
 @media (max-width:767px) {
@@ -200,7 +200,6 @@
 
 @media (max-width:767px) {
   .header-blue .hero{
-    margin-top:20px;
     text-align:center;
   }
 }
