redesign front add template for registration and authentication

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -13,6 +13,7 @@
     <div>
       <div class="video">
         <video class="video stream for-video"  src="{{link}}"  [autoplay]="'true'" [loop]="true" ></video>
+<!--        <video class="video stream for-video"  src="https://shorty.storage.yandexcloud.net/Бой курантов в Новый год без речи Путина.mp4"  [autoplay]="'true'" [loop]="true" ></video>-->
       </div>
       <div>
 
