add upload video

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
+<!--<app-header></app-header>-->
+<!--&lt;!&ndash;<router-outlet></router-outlet>&ndash;&gt;-->
+<!--<app-index></app-index>-->
+<!--<app-footer></app-footer>-->
+
 <app-header></app-header>
-<!--<router-outlet></router-outlet>-->
-<app-index></app-index>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
