--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,7 +16,9 @@
         </div>
 
         <div class="collapse navbar-collapse" id="navcol-1">
-          <p class="navbar-text navbar-right"><a class="navbar-link login" href="#">Log In</a> <a class="btn btn-default action-button" role="button" href="#">Sign Up</a></p>
+          <p class="navbar-text navbar-right">
+            <a class="navbar-link login" href="#">Log In</a>
+            <a class="btn btn-default action-button" role="button" href="#">Sign Up</a></p>
         </div>
       </div>
     </nav>
