--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,8 +17,10 @@
 
         <div class="collapse navbar-collapse" id="navcol-1">
           <p class="navbar-text navbar-right">
-            <a class="navbar-link login" href="#">Log In</a>
+            <a class="navbar-link login"  *ngIf="!auth.isAuthenticated()"  routerLink="/login">Log In</a>
             <a class="btn btn-default action-button" role="button" href="#">Sign Up</a></p>
+<!--          <button *ngIf="!auth.isAuthenticated()" class="btn btn-outline-success" routerLink="/login">Login</button>-->
+<!--          <button *ngIf="auth.isAuthenticated()" class="btn btn-outline-success" (click)="logout()">Logout</button>-->
         </div>
       </div>
     </nav>
