--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -26,7 +26,8 @@
       <div>
 
           <img type="button"  (click)="sendLike(link)" class="video-button-like image-button" src="assets/images/like.png">
-
+          <img class="video-heart image-button" src="assets/images/heart.png">
+          <div class="video-heart-count image-button" ><h2>{{likes}}</h2></div>
           <img type="button" (click)="sendDislike(link)" class="video-button-dislike image-button" src="assets/images/dislike.png">
       </div>
     </div>
@@ -35,12 +36,6 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Следующий</span>
       </button>
-    </div>
-    <div class="carousel-item">
-      <img src="/assets/images/2.jpg.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="/assets/images/3.jpg.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
 </div>
