add docker file

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -27,7 +27,7 @@
 
           <img type="button"  (click)="sendLike(link)" class="video-button-like image-button" src="assets/images/like.png">
           <img class="video-heart image-button" src="assets/images/heart.png">
-          <div class="video-heart-count image-button" ><h2>{{likes}}</h2></div>
+          <div class="video-heart-count image-button" ><h2>{{likesNumb}}</h2></div>
           <img type="button" (click)="sendDislike(link)" class="video-button-dislike image-button" src="assets/images/dislike.png">
       </div>
     </div>
